add Phase 5 offline baseline evaluator for CF + semantic with snapshot outputs